--- a/_gulp/_jade/help.jade
+++ b/_gulp/_jade/help.jade
@@ -23,7 +23,7 @@ html(lang="ru")
             
             .h1.h1--dark Помощь
             
-            nav(role="navigation").navigation-level2.navigation-level2--help#help__navigation
+            nav#help__navigation(role="navigation").navigation-level2.navigation-level2--help.anchor__list
               ul
                 li.active: a(href="#block1").anchor С чего начать
                 li: a(href="#block2").anchor Заказ товара
