--- a/_gulp/_jade/_include/_footer-js.jade
+++ b/_gulp/_jade/_include/_footer-js.jade
@@ -7,6 +7,7 @@ script(src='./js/libs/sumoselect/jquery.sumoselect.min.js')
 script(src='./js/libs/nanoscroller/jquery.nanoscroller.min.js')
 script(src="https://cdnjs.cloudflare.com/ajax/libs/slideout/1.0.1/slideout.min.js")
 script(src="./js/libs/air-datepicker/dist/js/datepicker.min.js")
+script(src="./js/libs/jquery-custom-scrollbar-0.5.5/jquery.custom-scrollbar.min.js")
 
 
 //- Old browser
