--- a/_gulp/_jade/_include/_head.jade
+++ b/_gulp/_jade/_include/_head.jade
@@ -37,6 +37,7 @@ head
   link(rel="stylesheet", href="./js/libs/sumoselect/sumoselect.css")
   link(rel="stylesheet", href="./js/libs/nanoscroller/nanoscroller.css")
   link(rel="stylesheet", href="./js/libs/air-datepicker/dist/css/datepicker.min.css")
+  link(rel="stylesheet", href="./js/libs/jquery-custom-scrollbar-0.5.5/jquery.custom-scrollbar.css")
   
   link(rel='stylesheet', href='./css/main.css')
   link(rel='stylesheet', href='./css/add.css')
