--- a/_gulp/_sass/add.sass
+++ b/_gulp/_sass/add.sass
@@ -589,3 +589,30 @@ h5, .h5
     &>div
       &+div
         padding-left: 5px
+
+.scrollbar
+  height: 630px
+  width: 847px
+  .nano-content
+    padding-right: 30px
+.scrollable.default-skin .scroll-bar.vertical
+  width: 5px
+  border-right: 2px solid #e6ecee
+.scrollable.default-skin .scroll-bar .thumb
+  background: #30c4f3
+  width: 4px
+  opacity: 1
+  border-radius: 0
+  right: -2px
+
+@media (max-width: 1199px)
+  .scrollbar
+    width: 697px
+
+@media (max-width: 991px)
+  .scrollbar
+    width: 532px
+
+@media (max-width: 767px)
+  .scrollbar
+    width: 100%
